--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+     "build": "next build", 
+    "start": "next start",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
